--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^8.1.4",
     "@fontsource-variable/dm-sans": "^5.2.5",
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.5",
